# feedback-project

./: .gitignore  DEVELOPMENT_LOG.md  PRESENTATION_PLAN.md  README.md  actual_code.py  mac_rudder_failure_controls.py  presentation_content.md  pyproject.toml  requirements.txt  rudder_failiure_controls.py  test.py
artifacts/: session-20260402-163850.csv  session-20260402-164414.csv  session-20260402-164620.csv  session-20260402-164749.csv  session-20260402-171046.csv  session-20260402-174223.csv  session-20260402-174356.csv  session-20260402-174643.csv  session-20260402-174808.csv  session-20260402-175013.csv  session-20260402-175250.csv  session-20260412-144635.csv  session-20260412-145747.csv  session-20260412-145945.csv  session-20260412-150049.csv  session-20260412-150207.csv  session-20260412-150814.csv  session-20260412-152143.csv  session-20260412-152447.csv  session-20260412-152712.csv  session-20260412-152842.csv  session-20260412-153103.csv  session-20260412-153252.csv  session-20260412-153459.csv  session-20260412-154219.csv  session-20260412-154356.csv  session-20260412-154605.csv  session-20260412-155500.csv  session-20260412-160523.csv  session-20260412-160709.csv  session-20260412-160946.csv  session-20260412-161236.csv  session-20260412-161348.csv  session-20260412-162005.csv  session-20260412-162133.csv  session-20260412-162359.csv  session-20260412-162554.csv  session-20260412-162637.csv  session-20260416-011437.csv  session-20260416-012944.csv  (+17 more)
tests/: test_console.py  test_logging_schema.py  test_master_controller.py  test_packets.py  (+2 more)
(+31 files in other folders)
